gobmkida/c0/find_worm_attacks_and_defenses
/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/find_worm_attacks_and_defenses/src/engine/worm.c:1274:32: error: use of undeclared identifier 'find_worm_attacks_and_defenses_libs'; did you mean 'find_worm_attacks_and_defenses'?
liberties = findlib( str, 241, find_worm_attacks_and_defenses_libs); 
                               ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
                               find_worm_attacks_and_defenses
/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/find_worm_attacks_and_defenses/src/engine/worm.c:1192:7: note: 'find_worm_attacks_and_defenses' declared here
void  find_worm_attacks_and_defenses( ) 
      ^
/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/find_worm_attacks_and_defenses/src/engine/worm.c:1277:7: error: use of undeclared identifier 'find_worm_attacks_and_defenses_libs'
pos = find_worm_attacks_and_defenses_libs[k]; 
      ^
2 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/find_worm_attacks_and_defenses/src/obj/1/worm.o] Error 1
